2. Основы javascript. 10. Условные ветвления

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ article {
 code {
     font-family: Consolas, Lucida Console, Menlo, Monaco, monospace;
     background-color: aliceblue;"
+    white-space: pre;
 }
 
 article.note h2:first-child::before {
