4. Формы, элементы управления. 1. Свойства и методы формы

--- a/style.css
+++ b/style.css
@@ -53,3 +53,9 @@ img {
     width: 80%;
     height: auto;
 }
+
+span.selectedCode {
+    display: inline-block;
+    border: 1px solid red;
+    background: lightgoldenrodyellow;
+}
