--- a/style.css
+++ b/style.css
@@ -75,3 +75,12 @@ pre:hover {
 pre {
     transition: box-shadow .5s ease;
 }
+
+fieldset {
+    border-radius: 5px;
+    margin-bottom: 0.5rem;
+}
+
+fieldset legend {
+    font-size: 1.3rem;
+}
