--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ article {
     border: black 1px solid;
     border-radius: 5px;
     margin: 5px;
-    padding: 5px;
+    padding: 5px
+;
 }
 
 code {
