--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 article {
     border: black 1px solid;
     border-radius: 5px;
-    margin: 5px;
+    margin: 0.5rem;
     padding: 5px;
 }
 
@@ -78,6 +78,7 @@ pre:hover {
 
 pre {
     transition: box-shadow .5s ease;
+    position: relative;
 }
 
 fieldset {
